Improved layout of color example

--- a/src/region/index.html
+++ b/src/region/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Material Starter Kit</title>
+  <title>Product Demo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- import Material Icons from Google Fonts -->
