--- a/src/color/index.html
+++ b/src/color/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Material Starter Kit</title>
+  <title>Color Demo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- import Material Icons from Google Fonts -->
@@ -12,10 +12,23 @@
 </head>
 
 <body class="mdc-typography">
+  <header class="mdc-top-app-bar">
+    <div class="mdc-top-app-bar__row">
+      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+          <button id="return" class="mdc-icon-button material-icons">
+            <div class="mdc-icon-button__ripple"></div>arrow_back
+          </button>
+        <span class="mdc-top-app-bar__title">Colors</span>
+      </section>
+      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+      </section>
+    </div>
+  </header>
   <orange-container class="container mdc-elevation--z1">
     <children-element class="mdc-elevation--z2"></children-element>
   </orange-container>
   <pink-container class="container mdc-elevation--z1"></pink-container>
+
   <mwc-button id="move" raised label="Move children"></mwc-button>
 </body>
 
