--- a/color/index.html
+++ b/color/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- import the Material stylesheet -->
   <link rel="stylesheet" href="color.css">
-</head>
+<script defer src="../color.js"></script></head>
 
 <body class="mdc-typography">
   <header class="mdc-top-app-bar">
