--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- import the Material stylesheet -->
   <link rel="stylesheet" href="index.css">
-</head>
+<script defer src="index.js"></script></head>
 
 <body class="mdc-typography">
   <h1 class="mdc-typography--headline3">Hello, Dependency resolution Demo!</h1>
