--- a/region/index.html
+++ b/region/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- import the Material stylesheet -->
   <link rel="stylesheet" href="region.css">
-</head>
+<script defer src="../region.js"></script></head>
 
 <body class="mdc-typography">
 
