fixed relative path for css files and redirects

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
   </p>
   <br>
 
-  <a raised label="Color Demo" href="/color">Color Demo</a>
-  <a raised label="Products Demo" href="/region">Products Demo</a>
+  <a raised label="Color Demo" href="./color">Color Demo</a>
+  <a raised label="Products Demo" href="./region">Products Demo</a>
 
   <!-- import the Material javascript file -->
   <script src="index.js" async></script>
