--- a/region/index.html
+++ b/region/index.html
@@ -8,7 +8,7 @@
   <!-- import Material Icons from Google Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- import the Material stylesheet -->
-  <link rel="stylesheet" href="region.css">
+  <link rel="stylesheet" href="../region.css">
 <script defer src="../region.js"></script></head>
 
 <body class="mdc-typography">
